add search by title route
