# docs/swagger.json
@@ -11,7 +11,7 @@
         },
         "version": "1.0.0"
     },
-    "host": "localhost:3002",
+    "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
         "/{type}": {
@@ -30,8 +30,65 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Movies",
+                        "description": "Type",
                         "name": "type",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Page Number",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Movies Information",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.MoviesInformationResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid type",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/{type}/movie/{title}": {
+            "get": {
+                "description": "Get movie information by Title",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Get Movie by Title"
+                ],
+                "summary": "Get movie information by Title",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type",
+                        "name": "type",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title",
+                        "name": "title",
                         "in": "path",
                         "required": true
                     }
@@ -61,6 +118,14 @@
     },
     "definitions": {
         "controllers.MovieInformationResponse": {
+            "type": "object",
+            "properties": {
+                "item": {
+                    "$ref": "#/definitions/models.Movie"
+                }
+            }
+        },
+        "controllers.MoviesInformationResponse": {
             "type": "object",
             "properties": {
                 "currentPage": {
